--- a/package.json
+++ b/package.json
@@ -3,17 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "firebase": "^9.9.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
-    "semantic-ui-css": "^2.4.1",
+    "firebase": "^9.11.0",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "semantic-ui-react": "^2.1.3",
-    "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
