--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "firebase": "^9.11.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-scripts": "^5.0.1",
     "semantic-ui-react": "^2.1.3",
     "uuid": "^9.0.0"
   },
