--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "18.1.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
+    "react-to-print": "^2.14.10",
     "semantic-ui-react": "^2.1.3",
     "uuid": "^9.0.0"
   },
